# PDF-agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  TECHNICAL_NOTE.md  TEST_INSTRUCTIONS.md  docker-compose.yml  pyproject.toml  render.yaml
app/: __init__.py  agent.py  api.py  config.py  embeddings.py  index.py  ingest.py  logging.py  models.py  pipeline.py
evals/: ragas_eval.py  ragas_report.json  run_eval.py  test_queries.json
tests/: test_ingest.py  test_smoke.py
ui/: Dockerfile  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: ChatComposer.tsx  ChatMessage.tsx  PDFViewer.tsx  UploadCard.tsx
ui/src/lib/: api.ts  storage.ts  types.ts
