[project]
name = "pdf-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cohere>=6.1.0",
    "datasets>=4.8.5",
    "fastapi>=0.136.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "openai>=2.33.0",
    "pinecone>=8.1.2",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.3",
    "ragas>=0.4.3",
    "streamlit>=1.57.0",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
